--- a/notebook/templates/page.html
+++ b/notebook/templates/page.html
@@ -39,6 +39,7 @@
             bootstrap: 'components/bootstrap/js/bootstrap.min',
             bootstraptour: 'components/bootstrap-tour/build/js/bootstrap-tour.min',
             'jquery-ui': 'components/jquery-ui/ui/minified/jquery-ui.min',
+            'jquery.scrollTo': 'components/jquery.scrollTo/jquery.scrollTo.min',
             moment: 'components/moment/moment',
             codemirror: 'components/codemirror',
             termjs: 'components/term.js/src/term',
@@ -68,6 +69,10 @@
             bootstraptour: {
               deps: ["bootstrap"],
               exports: "Tour"
+            },
+            'jquery.scrollTo': {
+              deps: ["jquery"],
+              exports: "scrollTo"
             },
             "jquery-ui": {
               deps: ["jquery"],
