font, size, top menu, code mirror select

--- a/notebook/static/custom/custom.css
+++ b/notebook/static/custom/custom.css
@@ -34,7 +34,7 @@ div.input_area {
 
 .sidebar {
   position: fixed;
-  background: yellow;
+  background: white;
   right: 0;
   bottom: 0;
   top: 50px;
