--- a/notebook/templates/notebook.html
+++ b/notebook/templates/notebook.html
@@ -13,6 +13,7 @@ window.mathjax_url = "{{mathjax_url}}";
 
 <!-- <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'> -->
 <link href='https://fonts.googleapis.com/css?family=Merriweather:300,300italic,700,700italic' rel='stylesheet' type='text/css'>
+<link href="//fonts.googleapis.com/css?family=Merriweather:400,700|Open+Sans:300,400italic,700italic,400,700" rel="stylesheet" type="text/css">
 
 <link rel="stylesheet" href="{{ static_url("components/bootstrap-tour/build/css/bootstrap-tour.min.css") }}" type="text/css" />
 <link rel="stylesheet" href="{{ static_url("components/codemirror/lib/codemirror.css") }}">
